Fix datetimeformat on ios safari

--- a/themes/awesome/static/css/components/_maps.scss
+++ b/themes/awesome/static/css/components/_maps.scss
@@ -22,8 +22,10 @@
   flex-wrap: wrap;
   justify-content: space-between;
   gap: 1.5rem;
-  row-gap: 0.5rem;
+  row-gap: 0;
   margin-block: 0.5rem;
+  padding-bottom: 0.5rem;
+  border-bottom: 2px solid var(--fg);
 }
 
 .route__name p {
@@ -39,5 +41,5 @@
   row-gap: 0;
 }
 .route__stats p {
-  margin-block: 0.25rem;
+  margin-block: 0.2rem;
 }
